apps/sendwavedemo/01-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: sendwavedemo
  name: sendwavedemo-service
spec:
  selector:
    app: sendwavedemo
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
